# Python-CIMIS

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_script.py  example_csv_enhancement.py  example_usage.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  setup.py
docs/: API_REFERENCE.md  INSTALLATION.md  Makefile  README.md  USER_GUIDE.md  build_docs.bat  build_docs.sh  requirements.txt
docs/source/: api_reference.rst  changelog.rst  client.rst  conf.py  contributing.rst  examples.rst  exceptions.rst  index.rst  installation.rst  license.rst  models.rst  quickstart.rst  user_guide.rst  utils.rst
examples/: README.md  advanced_usage.py  basic_usage.py  data_analysis.py  real_world_use_cases.py
python_cimis/: __init__.py  auto_filename_generation.py  client.py  endpoints.py  exceptions.py  models.py  py.typed  utils.py
