[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-CIMIS"
version = "1.3.3"
description = "A comprehensive Python client for the California Irrigation Management Information System (CIMIS) API"
authors = [
    {name = "Mahipal Reddy Ramireddy", email = "mahipalbablu16@gmail.com"},
    {name = "M. A. Andrade", email= "andradea@unr.edu"}
]
maintainers = [
    {name = "Precision Irrigation Management Lab (PRIMA)"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["cimis", "weather", "california", "irrigation", "agriculture", "climate", "data", "api"]
dependencies = [
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx>=5.0.0,<9.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/python-cimis/python-cimis-client"
Repository = "https://github.com/python-cimis/python-cimis-client"
Documentation = "https://python-cimis-client.readthedocs.io/"
"Bug Reports" = "https://github.com/python-cimis/python-cimis-client/issues"
"ReadTheDocs" = "https://python-cimis-client.readthedocs.io/"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_cimis*"]

[tool.setuptools.package-data]
python_cimis = ["py.typed"]
