[metadata]
name = python-CIMIS
version = attr: python_cimis.__version__
author = Mahipal Reddy Ramireddy, M. A. Andrade
author_email = mahipalbablu16@gmail.com
maintainer = Precision Irrigation Management Lab (PRIMA)
maintainer_email = mahipalbablu16@gmail.com
description = A comprehensive Python client for the California Irrigation Management Information System (CIMIS) API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Precision-Irrigation-Management-lab/Python-CIMIS
project_urls =
    Bug Reports = https://github.com/Precision-Irrigation-Management-lab/Python-CIMIS/issues
    Source = https://github.com/Precision-Irrigation-Management-lab/Python-CIMIS
    Documentation = https://python-cimis.readthedocs.io/
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.25.0

[options.packages.find]
include = python_cimis*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    flake8
    mypy
docs =
    sphinx>=5.0.0,<9.0.0
    sphinx-rtd-theme>=2.0.0
    myst-parser>=2.0.0

[bdist_wheel]
universal = 0
